--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html{
 }
 
 body{
-	background-color: #030303;
+	background-color: #222831;
  font-family: 'Encode Sans Expanded', sans-serif;
 
  color: #f0ffff;
@@ -45,7 +45,7 @@ hr{
 
 .page-wrapper{
 	min-height: 100vh;
-	background: url("../img/background.jpg") no-repeat top center fixed;
+	background: url("../img/background-x.jpg") no-repeat top center fixed;
 	background-size: cover;
 }
 
@@ -57,7 +57,7 @@ hr{
 .content-wrapper{
 	display: flex;
 	flex-grow: 1;
-	flex-direction: column;
+	flex-direction: column; 
 	align-items: center;
 	margin: 0 auto;
 	padding: 50px 30px;
@@ -66,6 +66,17 @@ hr{
 .header{
 	display: flex;
 	flex-direction: column;
+}
+
+.menu{
+	position: fixed;
+	background-color: rgba(34, 40, 49, 1);
+	top: 0;
+	width: 100%;
+}
+
+.menu__items{
+	height: 100vh;
 }
 
 .menu ul{
@@ -88,12 +99,16 @@ hr{
 	justify-content: flex-end;
 	border-bottom: 0;
 	height: auto;
-	margin: 30px 30px 0 0;
+	margin: 20px 20px 10px 0;
 }
 
 .menu__item:hover {
   background: #ff6347;
   color: #ffffff;
+}
+
+.menu__icon:hover , .menu__close:hover{
+	cursor: pointer;
 }
 
 .about-me{
@@ -254,6 +269,8 @@ hr{
 
 	.menu__items{
 		height: auto;
+		display: block;
+		margin: 20px auto;
 	}
 
 	.menu ul{
@@ -261,12 +278,6 @@ hr{
 		flex-direction: row;
 		justify-content: center;
 	}
-
-	.menu__items{
-		display: block;
-		margin-top: 30px;
-	}
-
 	.menu__icon, .menu__close{
 		display: none
 	}
